tests/fixtures/invalid/int_sub_bytes.py
# Cannot subtract Bytes from Int
x: int = 1 - b"hello"
